// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/practitioners DELETE / /:practitionerId - delete a practitioner 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/practitioners GET / /:practitionerId - get a practitioner 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
  },
  "result": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
}
`;

exports[`/api/practitioners GET / get all practitioners 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
  },
  "result": Array [
    "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
  ],
}
`;

exports[`/api/practitioners GET / get all practitioners with weeklySchedule 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
        "weeklySchedule": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a40": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "id": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "isAdvanced": false,
        "monday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "saturday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "sunday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "thursday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "tuesday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "wednesday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
      },
    },
  },
  "result": Array [
    "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
  ],
}
`;

exports[`/api/practitioners POST / create practitioner 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
      },
    },
  },
}
`;

exports[`/api/practitioners PUT / /:practitionerId - update practitioner 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Updated",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "services": Array [],
        "type": "Hygienist",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
  },
  "result": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
}
`;
